# dojo-stellar

./: .gitignore  LICENSE  README.md
back-end/: .env  Cargo.toml  dockerfile
back-end/src/: main.rs
back-end/src/config/: swagger.rs
back-end/src/models/: hellomodel.rs  mod.rs  stellar.rs  user.rs
back-end/src/services/: hello.rs  stellar.rs  user.rs
front-end/: .dockerignore   dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
front-end/src/: App.tsx  index.css  main.tsx
front-end/src/layouts/: MainLayout.tsx
front-end/src/pages/: BalancePage.tsx  BlockPage.tsx  HomePage.tsx  TransactionPage.tsx
front-end/src/services/: api.ts
